src/pages/news/styles/feed-news-page.css
html {
  overflow-x: clip;
}
.left-sidebar .menu-top h6 {
  font-family: var(--font-archivo-narrow), sans-serif;
  font-size: var(--font-size-4xl);
  font-style: normal;
  font-weight: var(--font-weight-semibold);
  line-height: var(--line-height-normal);
  background: var(--gradients-luna-logo);
  background-clip: text;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}
aside {
  width: 268px;
}
.avatar-name {
  font-weight: var(--font-weight-thin);
  font-size: var(--font-size-base);
}
.filter-dropdown img {
  rotate: 180deg;
}

main {
  gap: 10px;
}

main h2 {
  text-align: center;
  font-size: var(--font-size-4xl);
  font-weight: var(--font-weight-semibold);
  line-height: var(--line-height-relaxed);
  letter-spacing: 12.48px;
}

.title {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 20px 0;
}

.shadow-box {
  width: 100%;
  position: relative;
  margin-top: -40px;
  height: 40px;
  border-radius: 5px;
  background: var(--gradients-title-linear);
  filter: blur(100px);
  z-index: 2;
}

.news-wrapper {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 4.3rem;

  h5 {
    font-family: var(--font-abeezee);
    font-size: var(--font-size-2xl);
    font-style: normal;
    font-weight: var(--font-weight-regular);
    line-height: var(--line-height-normal);
    align-self: stretch;
  }

  p {
    align-self: stretch;
    font-size: var(--font-size-base);
    font-weight: var(--font-weight-extralight);
    line-height: var(--line-height-loose); /* 24px */
  }
}

.news-card {
  display: flex;
  width: 100%;
  z-index: 1;
  max-width: 1200px;
  min-height: 300px;
  justify-content: center;
  align-items: center;
  gap: 4rem;
  align-self: stretch;
  cursor: pointer;
  border-radius: 12px;
  transition: 0.15s ease-in-out;

  img {
    width: 47.51%;
    max-width: 560px;
    align-self: stretch;
    transition: 0.15s ease-in-out;
    object-fit: cover;
  }
}

.news-card:hover {
  box-shadow: var(--shadow-hover);

  img {
    border-radius: 12px 0 0 12px;
  }
}
.news-card:active {
  outline: 2.5px solid var(--blueviolet-blueviolet);
}

.news-info {
  display: flex;
  width: 100%;
  transition: 0.15s ease-out;
  padding: 20px 20px 20px 0;
  flex-direction: column;
  align-items: flex-start;
  gap: 2rem;
}

.news-texts {
  display: flex;
  width: 100%;
  flex-direction: column;
  align-items: flex-start;
  gap: 1.6rem;
  align-self: stretch;
}

.tags-wrapper {
  display: flex;
  width: 100%;
  align-items: center;
  align-content: center;
  gap: 0.4rem;
  align-self: stretch;
  flex-wrap: wrap;
}

.tag {
  display: flex;
  padding: 4px 10px;
  justify-content: center;
  align-items: flex-end;
  gap: 10px;
  border-radius: 100px;
  border: 1px solid var(--blueviolet-blueviolet);
  background: var(--blueviolet-blueviolet);

  p {
    font-family: var(--font-abeezee), sans-serif;
    font-size: var(--font-size-base);
    font-weight: var(--font-weight-regular);
  }
}

@media (max-width: 1200px) {
  .news-card {
    flex-direction: column;
    gap: 3rem;

    img {
      width: 100%;
      max-width: none;
      height: auto;
    }

    .news-info {
      padding: 0 20px 20px 20px;
    }
  }

  .news-card:hover {
    img {
      border-radius: 12px 12px 0 0;
    }
  }
}
@media (max-width: 964px) {
  main {
    max-width: unset;
  }
  .right-sidebar {
    display: none;
  }
}

@media (max-width: 450px) {
  main {
    padding: 75px 30px 30px 30px;
    h2 {
      font-size: var(--font-size-2xl);
    }
  }
}

